<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.med_manager.ui.MedFormActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/med_name_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/med_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/med_name"
                android:layout_width="256dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/edit_text_background_color"
                android:ems="10"
                android:hint="@string/med_name_hint_text"
                android:inputType="textPersonName"
                android:paddingLeft="3dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/med_type_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/med_name_linear_layout">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/med_type"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_med_type"
                android:layout_width="260dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/med_description_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/med_type_linear_layout">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/med_description"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/med_description"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:background="@color/edit_text_background_color"
                android:ems="10"
                android:hint="@string/med_description"
                android:inputType="textPersonName" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/med_dosage_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/med_description_linear_layout">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/dosage"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/med_dosage"
                android:layout_width="73dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/edit_text_background_color"
                android:ems="10"
                android:hint="@string/dosage_hint_text"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/interval_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/med_dosage_linear_layout">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/interval"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Hours"/>

                <Switch
                android:id="@+id/switch_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    android:text="Minutes"/>
                </LinearLayout>


            <EditText
                android:id="@+id/med_interval"
                android:layout_width="73dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/edit_text_background_color"
                android:ems="10"
                android:hint="@string/interval_hint_text"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interval_linear_layout">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/start_date"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/med_interval" />

            <EditText
                android:id="@+id/med_start_date"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/edit_text_background_color"
                android:editable="false"
                android:ems="10"
                android:hint="@string/start_date_hint_text"
                android:inputType="none" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/end_date"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/med_end_date"
                android:layout_width="68dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/edit_text_background_color"
                android:editable="false"
                android:ems="10"
                android:hint="@string/end_date_hint_text"
                android:inputType="none" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_linear_layout">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="Start Time"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/switch_interval" />

            <EditText
                android:id="@+id/start_time_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/edit_text_background_color"
                android:editable="false"
                android:ems="10"
                android:hint="@string/start_time"
                android:inputType="none" />


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
