...
    <string name="start_date_hint_text">12/07/2018</string>
    <string name="end_date">End Date</string>
    <string name="end_date_hint_text">15/07/2018</string>
    <string name="action_profile">profile</string>
    <string name="action_add">Add medication</string>
    <string name="action_delete_all_meds">Delete all medications</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="user_name">Username</string>
    <string name="id">Id</string>
    <string name="email">Email</string>
    <string name="first_name">Firstname</string>
...
